Fixed layout issues.

--- a/css/light_bot.css
+++ b/css/light_bot.css
@@ -1,26 +1,75 @@
 html, body
 {
 	margin: 0px;
-	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	background: #555555;
 }
 
-canvas
+.container
 {
-	display: block;
+    background-color: #2EB8E6;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+	border:3px solid #0D8FBA;
+	padding: 8px
+}
+
+#boardCanvas
+{
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 500px;
+	height: 500px;
+}
+
+#moveQueue
+{
+	position: absolute;
+	left: 510px;
+	top: 10px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	width: 458px;
+	height: 458px;
+}
+
+#possibleMoveQueue
+{
+	position: absolute;
+	left: 10px;
+	top: 510px;
+	height: 100px;
+	width: 458px;
+}
+
+#controlButtons
+{
+	position: absolute;
+	left: 510px;
+	top: 510px;
+	height: 100px;
+	width: 500px;
+}
+
+.baseMoveButton
+{
+	width: 64px;
+	height: 64px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	border-width: 3px;
+	border-style: solid;
+	margin: 8px;
 }
 
 .moveButton
 {
-	position: absolute;
 	background-color: #00FFBF;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
-	border-radius:4px;
-	border:1px solid #009671;
-	display:inline-block;
+	border-color: #009671;
 	cursor: default;
 }
 
@@ -31,15 +80,9 @@ canvas
 
 .possibleMoveButton
 {
-	position: absolute;
 	background-color: #00CC99;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
-	border-radius:4px;
-	border:1px solid #009671;
-	display:inline-block;
-	cursor:pointer;
-	src: url( "images/TurnLeft.png" );
+	border-color: #009671;
+	cursor: pointer;
 }
 
 .possibleMoveButton:active
@@ -47,53 +90,49 @@ canvas
 	background-color: #5BDEBD;
 }
 
-.executeButton
+.controlButton
 {
-	position: absolute;
-	background-color: #26D451;
+	width: 81px;
+	height: 81px;
 	-moz-border-radius:4px;
 	-webkit-border-radius:4px;
 	border-radius:4px;
-	border:3px solid #1C9E3D;
 	display:inline-block;
 	cursor: pointer;
+	border-width: 3px;
+	border-style: solid;
+	margin: 8px;
 }
 
-.executeButton:active
+#start
+{
+	background-color: #26D451;
+	border-color: #1C9E3D;
+}
+
+#start:active
 {
 	background-color: #42F56E;
 }
 
-.stopButton
+#stop
 {
-	position: absolute;
 	background-color: #F74848;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
-	border-radius:4px;
-	border:3px solid #9E1C1C;
-	display:inline-block;
-	cursor: pointer;
+	border-color: #9E1C1C;
 }
 
-.stopButton:active
+#stop:active
 {
-	background-color: #FA7373;
+	border-color: #FA7373;
 }
 
-.resetButton
+#reset
 {
-	position: absolute;
 	background-color: #FFAE00;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
-	border-radius:4px;
-	border:3px solid #A67100;
-	display:inline-block;
-	cursor: pointer;
+	border-color: #A67100;
 }
 
-.resetButton:active
+#reset:active
 {
 	background-color: #FFC54A;
 }
